# KermesseSolidariaRUST

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  tailwind.config.js
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  seed.rs
backend/src/api/: auth.rs  collaboration.rs  dashboard.rs  kermesse.rs  mod.rs  sales.rs
backend/src/entity/: collaborators.rs  dishes.rs  ingredient_donations.rs  ingredients.rs  kermesses.rs  mod.rs  prelude.rs  sale_items.rs  sales.rs  users.rs
backend/src/utils/: auth.rs  hash.rs  jwt.rs  mod.rs
frontend/: Cargo.toml  index.html  input.css  style.css  tailwind.config.js
frontend/src/: context.rs  main.rs  router.rs
frontend/src/components/: cart_drawer.rs  collaboration_form.rs  footer.rs  ingredient_donations.rs  mod.rs  navbar.rs  organizer_collaborators.rs  organizer_dashboard.rs  organizer_orders.rs  receipt.rs
frontend/src/context/: cart.rs
frontend/src/pages/: add_dish.rs  all_kermesses.rs  auth.rs  checkout.rs  collaborator_dashboard.rs  create_kermesse.rs  dashboard.rs  edit_kermesse.rs  home.rs  kermesse_detail.rs  kermesse_orders.rs  mod.rs  my_orders.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250109_000002_v2_schema_updates.rs  m20250120_000003_add_payment_info.rs  m20260127_012246_add_location_to_kermesse.rs
