[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
sea-orm = { version = "1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.7", features = ["v4", "serde"] }
env_logger = "0.11.8"
log = "0.4.29"
futures = "0.3.31"
rust_decimal = "1.39.0"

[dev-dependencies]
actix-rt = "2.9"
