[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement"] }
log = "0.4"
wasm-logger = "0.2"
yew-router = "0.18"
wasm-bindgen-futures = "0.4.56"
gloo-storage = "0.3.0"
gloo-dialogs = "0.2.0"
